--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.5.6",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.8.7",
     "morgan": "~1.7.0",
