--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.7",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "wechat-api": "^1.32.1"
   }
 }
